traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:6: error: value update is not a member of object Array
      Array(gauche,cote) = posSuivante(gauche,cote)
      ^